fixed media breaks to allow overlay fonts not to wrap

--- a/Asos.FashionEmergency.Web/stylesheets/view-products.css
+++ b/Asos.FashionEmergency.Web/stylesheets/view-products.css
@@ -17,10 +17,10 @@
     width: 100%;
     color: white;
  }
-@media only screen and (max-width: 530px) {
+@media only screen and (max-width: 600px) {
    .product .detail  { font-size: 30px; }
 }
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 480px) {
    .product .detail  { font-size: 22px; }
 }
 .product .price, .product .availability {
